small fixes + better content shift

--- a/robotics/index.css
+++ b/robotics/index.css
@@ -9,7 +9,7 @@
 }
 
 #opening > img:not(:first-child) {
-  @media screen and (max-width: 1280px) {
+  @media screen and (max-width: 1166px) {
     display: none;
   }
 }
